--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,31 @@ h3 {
     letter-spacing: 0.02em;
 }
 
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
+}
+
+.header-link {
+    display: flex;
+    align-items: center;
+}
+
+.header-address {
+    display: flex;
+    align-items: center;
+}
+
 .logo {
+    display: flex;
+    align-items: center;
+
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
     font-size: 18px;
@@ -118,9 +142,10 @@ h3 {
 }
 
 .hero-section {
+    margin-left: auto;
+    margin-right: auto;
     background-color: var(--logo-up-nav-cl);
     color: var(--main-background-cl);
-    text-align: center;
 }
 
 .hero-title {
@@ -165,7 +190,6 @@ h3 {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
-    text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--logo-up-nav-cl);
@@ -173,7 +197,6 @@ h3 {
 
 .section-team {
     background-color: var(--logo-down-cl);
-    text-align: center;
 }
 
 .section-team-title {
@@ -181,7 +204,6 @@ h3 {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
-    text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: var(--logo-up-nav-cl);
