--- a/css/styles.css
+++ b/css/styles.css
@@ -67,21 +67,28 @@ h3 {
 .header-nav {
     display: flex;
     align-items: center;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    justify-content: center;
+    flex-shrink: 0;
 }
 
 .header-link {
     display: flex;
     align-items: center;
+    gap: 40px; 
 }
 
 .header-address {
     display: flex;
     align-items: center;
+    gap: 40px;
 }
 
 .logo {
     display: flex;
     align-items: center;
+    padding-right: 76px;
 
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -149,6 +156,9 @@ h3 {
 }
 
 .hero-title {
+    padding-top: 188px;
+    padding-bottom: 48px;
+
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
@@ -156,6 +166,8 @@ h3 {
 }
 
 .hero-btn {
+    margin-bottom: 188px;
+
     background-color: var(--main-logo-cl);
     color: var(--main-background-cl);
 }
@@ -165,8 +177,15 @@ h3 {
     background: var(--active-link-cl);
 }
 
+.section-features {
+    display: flex;
+    align-items: flex-start;
+    gap: 24px;
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 .features-section {
-    text-align: left;
 }
 
 .general-section-title {
