--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,7 @@ img {
 }
 
 .container {
+    display: flex;
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
@@ -103,6 +104,10 @@ img {
     align-items: center;
     justify-content: center;
     flex-shrink: 0;
+}
+
+.nav-li {
+    padding: 24px 0;
 }
 
 .header-link {
