--- a/css/styles.css
+++ b/css/styles.css
@@ -93,10 +93,13 @@ img {
 }
 
 .container {
-    display: flex;
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.header-container {
+    display: flex;
 }
 
 .header-nav {
