--- a/css/styles.css
+++ b/css/styles.css
@@ -412,6 +412,11 @@ img {
 }
 
 .footer-paragraph {
+    display: flex;
+    width: 264px;
+    flex-direction: column;
+    flex-shrink: 0;
+
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--logo-down-cl);
