--- a/css/styles.css
+++ b/css/styles.css
@@ -120,8 +120,8 @@ img {
     display: flex;
     align-items: center;
     gap: 40px;
-    padding-left: 35px;
-    margin-right: 156px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .logo {
@@ -171,6 +171,7 @@ img {
 
 .address {
     font-style: normal;
+    color: currentColor;
 }
 
 .address-link {
