--- a/css/styles.css
+++ b/css/styles.css
@@ -199,10 +199,9 @@ img {
 }
 
 .hero-title {
-    padding-top: 188px;
-    padding-bottom: 48px;
     max-width: 496px;
     margin: 0 auto;
+    margin-bottom: 48px;
 
     font-weight: 700;
     font-size: 56px;
@@ -216,7 +215,7 @@ img {
     padding: 16px 32px;
     align-items: flex-start;
     gap: 10px;
-    margin:0 auto 188px;
+    margin: 0 auto;
     min-width: 169px;
     height: 56px;
     border: none;
@@ -244,9 +243,7 @@ img {
     flex-basis: calc((100% - 3 * 24px) / 4);
 }
 
-.features-section {
-    padding: 120px 0;
-}
+.features-section {}
 
 .features-li {
     width: calc((100% - 72px) / 4);
@@ -289,7 +286,8 @@ img {
     display: flex;
     align-items: flex-start;
     gap: 24px;
-    padding-bottom: 120px;
+    padding-bottom: 0;
+    padding-top: 0;
 }
 
 .what-li {
@@ -306,16 +304,17 @@ img {
     align-items: center;
     gap: 24px;
     text-align: center;
+    padding-top: 0;
 }
 
 .section-team {
-    padding: 120px 0;
     background-color: var(--logo-down-cl);
 }
 
 .section-team-title {
-    padding-top: 120px;
     margin-bottom: 72px;
+    padding-top: 120px;
+    padding-bottom: 0;
 
     font-style: normal;
     font-weight: 700;
@@ -425,4 +424,9 @@ img {
 .footer-link {
     display: inline-block;
     margin-bottom: 16px;
+    padding-top: 0;
+    padding-bottom: 0;
+    margin-right: 0;
 }
+
+
