--- a/css/styles.css
+++ b/css/styles.css
@@ -236,15 +236,18 @@ img {
     padding-bottom: 120px;
 }
 
+
+
 .section-features {
     display: flex;
     align-items: flex-start;
     gap: 24px;
     flex-basis: calc((100% - 3 * 24px) / 4);
-    padding: 120px 0;
 }
 
-.features-section {}
+.features-section {
+    padding: 120px 0;
+}
 
 .features-li {
     width: calc((100% - 72px) / 4);
@@ -311,13 +314,10 @@ img {
 .section-team {
     background-color: var(--logo-down-cl);
     padding: 120px 0;
-    padding-bottom: 0;
-    padding-top: 0;
 }
 
 .section-team-title {
     margin-bottom: 72px;
-    padding-top: 120px;
     padding-bottom: 0;
 
     font-style: normal;
